# python_homework_config_file_parser

./: .gitmodules  README.md  Taskfile.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  release.yml
docs/designs/: poc_block.plantuml  poc_class.plantuml  poc_sequence.plantuml  solution_class.plantuml  solution_fat_parsers_class.plantuml
src/config_file_parser/: main.py  parser.py
src/config_file_parser/parsers/: iparser.py  json_parser.py
src/config_file_parser/poc/: poc.py
src/config_file_parser/readers/: reader.py
tests/: test_parser.py
tests/unit/parsers/: test_iparser.py  test_json_parser.py
tests/unit/poc/: test_poc.py
tests/unit/readers/: test_reader.py
